# WebWG

./: .env  .env.example  .gitignore  FuckRKN.ps1  README.md  logger.py  main.py  peers.json  pyproject.toml  requirements.txt  schemas.py  utils.py  wg.py  wg0.conf  Новый текстовый документ.txt
static/css/: style.css  style_new.css  style_od.css
static/html/: 404.html  admin.html  index.html  index2.html  index_new.html  login.html  test.html
static/js/: ebal.js  ebal3.js  ebal_n.js
